# pot_neuromancer_for_ocp

./: README.md  main.py  pyproject.toml
notebooks/: dev_DPC.ipynb  dev_param_prog.ipynb  mgro_test.ipynb  test_DPC_examples.ipynb  test_lin_sys.ipynb
