[project]
name = "pot-neuromancer-for-ocp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "casadi>=3.7.2",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "neuromancer>=1.5.4",
    "setuptools==80",
    "torch>=2.8.0",
    "velocity-planner>=0.1.0",
]

[tool.uv.sources]
velocity-planner = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
